--- a/src/app/components/pokemons/pokemons.component.scss
+++ b/src/app/components/pokemons/pokemons.component.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 100vh;
+    // height: 100vh;
 }
 
 .pokemons-card-container {
@@ -13,7 +13,12 @@
     gap: 20px;
     max-width: 1200px;
     /* Adjust as needed */
-    width: 100%;
+    // width: 100%;
+
+    .pokemons-card-component-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 .app-pokemon-card {
