--- a/src/app/components/pokemons/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemons/pokemon-card/pokemon-card.component.html
@@ -16,5 +16,9 @@
                 {{details.weight}}
             </div>
         </div>
+        <div class="icon-container">
+            <mat-icon (click)="openModal(details)">info</mat-icon>
+            <!-- <button type="button" (click)="openModal(details)">Click</button> -->
+        </div>
     </div>
 </div>
