--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,11 +2,21 @@
     height: 100vh;
 
     .search-bar-container {
-        height: 5rem;
+        height: 2rem;
+        display: flex;
+        background-color: #e7f0ff;
+        align-items: center;
+        padding: 0.1rem;
+
+        input {
+            border-radius: 8px;
+            border: solid blue;
+            margin: 0.1rem;
+        }
     }
 
     .router-outlet-container {
-        height: calc(100% - 7rem);
+        height: calc(100% - 4rem);
         overflow: auto;
     }
 
