--- a/src/app/components/pokemons/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemons/pokemon-card/pokemon-card.component.html
@@ -6,14 +6,14 @@
         <div class="deitals-container-demographics">
             <div class="name-container">
                 <div class="name-text-container">
-                    {{details.name}}
+                    Name: {{details.name}}
                 </div>
             </div>
             <div class="height-container">
-                {{details.height}}
+                Height: {{details.height}}
             </div>
             <div class="width-container">
-                {{details.weight}}
+                Weight: {{details.weight}}
             </div>
         </div>
         <div class="icon-container">
